# xeus-python-wheel

./: pyproject.toml
.github/workflows/: build_wheel.yml
