[build-system]
requires = [
  "setuptools",
  "wheel",
  "scikit-build>=0.11.0,<0.14",
  "cmake",
  "ninja"
]


[tool.cibuildwheel]
test-command = "pip install pytest && pytest -vv {package}/test"

[tool.cibuildwheel.linux]
archs = "auto aarch64 ppc64le s390x"

[tool.cibuildwheel.macos]
archs = "x86_64 arm64"