[build-system]
requires = [
  "setuptools",
  "wheel",
  "scikit-build>=0.11.0,<0.14",
  "cmake",
  "ninja"
]


[tool.cibuildwheel]
test-command = "pip install pytest nbval && pytest -vv {package}/test"


[tool.cibuildwheel.windows]
before-build = "call \"c:/Program Files (x86)/Microsoft Visual Studio/2019/Enterprise/VC/Auxiliary/Build/vcvars64.bat\""

[tool.cibuildwheel.linux]
archs = "auto aarch64 ppc64le s390x"

[tool.cibuildwheel.macos]
environment = { CC="clang", CXX="clang++" }
archs = "x86_64 arm64"